# wasm-multithread

./: Cargo.toml  Makefile.toml  index.html  index.js
.cargo/: config
assets/wasm/: ironverse-editor.d.ts  ironverse-editor.js  ironverse-editor_bg.wasm.d.ts
crates/multithread/: Cargo.toml  build.sh  worker.js
crates/multithread/src/: lib.rs  plugin.rs  pool.rs  test.rs
crates/voxels/src/chunk/: chunk_manager.rs
crates/voxels/src/data/: surface_nets.rs  voxel_octree.rs
examples/: load_data_and_mesh.rs  load_data_async.rs  load_data_no_webworker.rs
src/: lib.rs  main.rs
tests/: web.rs
