[package]
name = "wasm_multithread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "crates/*",
]

[dependencies]
bevy = "0.10.1"
cfg-if = "1.0.0"

multithread = { path = "crates/multithread" }
voxels = { path = "crates/voxels" }
array-bytes = "6.1.0"
bevy_flycam = { path = "crates/bevy_flycam" }


[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "HtmlElement", 
  "ErrorEvent", 
  "Window",
  "Url",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-lite = "1.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
flume = "0.10.14"
js-sys = "0.3"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.19"
bincode = "1.3.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"



[[example]]
name = "load_data_async"
path = "examples/load_data_async.rs"
