[package]
name = "multithread"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3.64"
rayon = "1.1.0"
rayon-core = "1.5.0"
raytracer = { git = 'https://github.com/alexcrichton/raytracer', branch = 'update-deps' }
serde-wasm-bindgen = "0.4.3"
futures-channel-preview = "0.3.0-alpha.18"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

bevy = "0.10.1"
flume = "0.11.0"

voxels = { path = "../voxels" }

[dependencies.web-sys]
version = "0.3.23"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',

  'console',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  'MessageEvent',
  'Window',
  'Worker',

  'ImageData',
  'Navigator',
  'DedicatedWorkerGlobalScope',
]





















# [lib]
# crate-type = ["cdylib", "rlib"]

# [dependencies]
# wasm-mt = "0.1"
# serde = { version = "1.0", features = ["derive"] }
# serde_closure = "0.3"

# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"

# [dependencies.web-sys]
# version = "0.3"
# features = [
#   'console',
# ]


# [dependencies]
# bevy = "0.10.1"